Updates pre production

--- a/index.html
+++ b/index.html
@@ -13,4 +13,47 @@
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
+<style>
+  form#hsForm_541a916f-d6ba-43ad-90ff-42255f80d54e {
+    background: #111;
+    width: 50vw;
+    color: white;
+}
+input.hs-input{
+  border: none;
+    outline: none;
+    padding: 8px 0;
+    color: white;
+    border-radius: 0;
+    border-bottom: 1px solid white;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+input.hs-button.primary.large{
+  width: 50%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: none;
+    border-radius: 35px;
+    background: #00ce8e;
+    width: auto;
+    padding: 12px 60px;
+    color: #000;
+    margin: 2em 0 1em;
+}
+fieldset.form-columns-2{
+  max-width: 100vw;
+}
+.actions {
+    align-items: end;
+    position: relative;
+    left: 38vw;
+}
+textarea#message-541a916f-d6ba-43ad-90ff-42255f80d54e {
+    background: #111;
+    width: 47vw;
+    height: 130px;
+}
+</style>
+
 </html>
